--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=nur00103
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=user
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 sr.rabbit.queue.name=rabbit-queue
 sr.rabbit.exchange.name=rabbit-exchange
